--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>My first game</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <div class="container">
@@ -45,19 +46,17 @@
       </div>
     </div>
     <div id="js-resultsTableElement" class="container">
-      <div class="row">
-        <div class="col-xs-5 text-center">
-          <span id="js-playerPoints" class="badge">
-          0
-          </span>
+      <div class="row competitors_data">
+        <div class="col col-xs-5 text-center">
           <span id="js-playerName">
           Player Name
           </span>
+          <span id="js-playerPoints" class="badge">
+          0
+          </span>
         </div>
-        <div class="col-xs-2 text-center">
-          VS.
-        </div>
-        <div class="col-xs-5 text-center">
+        <div class="col-xs-2"></div>
+        <div class="col col-xs-5 text-center">
           <span id="js-computerPoints" class="badge">
           0
           </span>
@@ -65,26 +64,29 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-5 text-center">
+        <div class="col col-xs-5 text-center">
           <span id="js-playerPick">
             Player selection
           </span>
         </div>
+        <div class="col col-xs-2 text-center">
+            VS.
+        </div>
         <div class="col-xs-2"></div>
-        <div class="col-xs-5 text-center">
+        <div class=" col col-xs-5 text-center">
           <span id="js-computerPick">
             Computer selection
           </span>
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-5 text-center">
+        <div class="col col-xs-5 text-center">
           <span id="js-playerResult">
             Player Score
           </span>
         </div>
         <div class="col-xs-2"></div>
-        <div class="col-xs-5 text-center">
+        <div class="col col-xs-5 text-center">
           <span id="js-computerResult">
             Computer Score
           </span>
